# ur-mavcollector-gqc

./: CMakeLists.txt  Makefile  README.md  config.json
include/: BoardIdentifier.h  Fact.h  FactGroup.h  FactMetaData.h  JsonConfig.h  MAVLinkUdpConnection.h  ParameterManager.h  Vehicle.h  VehicleBatteryFactGroup.h  VehicleEstimatorStatusFactGroup.h  VehicleFactGroup.h  VehicleGPS2FactGroup.h  VehicleGPSFactGroup.h  VehicleRCFactGroup.h  VehicleSystemStatusFactGroup.h  VehicleTemperatureFactGroup.h  VehicleVibrationFactGroup.h  VehicleWindFactGroup.h
src/: BoardIdentifier.cpp  Fact.cpp  FactGroup.cpp  FactMetaData.cpp  JsonConfig.cpp  MAVLinkUdpConnection.cpp  ParameterManager.cpp  Vehicle.cpp  VehicleBatteryFactGroup.cpp  VehicleEstimatorStatusFactGroup.cpp  VehicleFactGroup.cpp  VehicleGPS2FactGroup.cpp  VehicleGPSFactGroup.cpp  VehicleRCFactGroup.cpp  VehicleSystemStatusFactGroup.cpp  VehicleTemperatureFactGroup.cpp  VehicleVibrationFactGroup.cpp  VehicleWindFactGroup.cpp  main.cpp  main.cpp.backup
